Update subcaption package configuration.

--- a/cvpr_submission/paper_main.tex
+++ b/cvpr_submission/paper_main.tex
@@ -4,8 +4,10 @@
 \usepackage{times}
 \usepackage{epsfig}
 \usepackage{graphicx}
-\usepackage{subcaption}
-\setlength{\belowcaptionskip}{-15pt}  % reduce padding below figures
+\usepackage[font=small]{subcaption}
+\captionsetup[figure]{skip=5pt}
+\captionsetup[table]{skip=5pt}
+\setlength{\belowcaptionskip}{-15pt}  % reduce padding below figure
 \usepackage{amsmath, amssymb, amsfonts,bm}
 \usepackage{amsthm}
 
