Made modifications to Experiments section as discussed with Jayram.

--- a/cvpr_submission/appendix.tex
+++ b/cvpr_submission/appendix.tex
@@ -57,7 +57,7 @@ The CoGenT dataset contains:
 	\begin{adjustbox}{width=\textwidth}
 		\begin{tabular}{lcccccccccc}
 			\toprule
-			Model & & SAMNet & && && COG&& \\
+			Model & & SAMNet & && && COG Model&& \\
 			\cmidrule{2-5} \cmidrule{7-11} 
 			&&&&& & paper & ours & ours & paper&\\
 			\cmidrule{7-9} \cmidrule{10-11}
