--- a/cvpr_submission/paper_main.tex
+++ b/cvpr_submission/paper_main.tex
@@ -43,6 +43,7 @@
 %\usepackage[usenames, dvipsnames]{color}
 
 \usepackage{cleveref}
+\crefname{section}{Section}{Sections}
 \crefname{figure}{Figure}{Figures}
 \crefname{table}{Table}{Tables}
 \crefname{appendix}{Appendix}{Appendices}
@@ -67,13 +68,6 @@
 \newtheorem*{example}{Example}
 \newtheorem*{question}{Question}
 
-
-\def\sec#1{Sec.~\ref{#1}}
-\def\Sec#1{Sec.~\ref{#1}}
-\def\fig#1{Fig.~\ref{#1}}
-\def\Fig#1{Fig.~\ref{#1}}
-\def\tab#1{Table~\ref{#1}}
-\def\Tab#1{Table~\ref{#1}}
 
 \usepackage{enumitem}
 \setlist{leftmargin=*} 
