Changes in experiments

--- a/cvpr_submission/appendix.tex
+++ b/cvpr_submission/appendix.tex
@@ -4,7 +4,6 @@
 \label{sec:datasets-desc}
 
 \begin{table}[ht]
-	\caption{Details of the Canonical and Hard variants of the COG dataset}
 	\centering
 	\begin{adjustbox}{width=0.5\textwidth}
 	\begin{tabular}{lcccccc}
@@ -18,12 +17,11 @@
 		\bottomrule	
 	\end{tabular}
 	\end{adjustbox}
-	\label{tab:cog_variants}
+	\caption{Details of the Canonical and Hard variants of the COG dataset}
+	\label{tab:cog_variants_supplement}
 \end{table}
 
 \begin{table}[ht]
-	\caption{Colors \& shapes combinations present in CoGenT-A \& -B datasets.}
-	\label{tab:cogent_conditions}
 	\centering
 	\begin{adjustbox}{width=0.5\textwidth}
 	\begin{tabular}{cccc}
@@ -35,6 +33,8 @@
 		\bottomrule
 	\end{tabular}
 	\end{adjustbox}
+	\caption{Colors \& shapes combinations present in CoGenT-A \& -B datasets.}
+    \label{tab:cogent_conditions}
 \end{table}
 
 The CoGenT dataset contains:
