--- a/cvpr_submission/paper_main.tex
+++ b/cvpr_submission/paper_main.tex
@@ -139,7 +139,7 @@
 
 %%%%%%%%% AUTHORS
 % WILL NEED TO REARRANGE THE AUTHORS LIST & GET CORRECT INSTITUTIONS / EMAILS
-\author{T.S. Jayram \and Vincent Albouy \and Tomasz Kornuta  \and Emre Sevgen \and Ahmet Ozcan \and Vincent Marois\\
+\author{T.S. Jayram \and  Vincent Marois \and Vincent Albouy \and Tomasz Kornuta  \and Emre Sevgen \and Ahmet Ozcan\\
 IBM Research AI\\
 Almaden Research Center, San Jose, CA 95120, USA\\
 Thomas J. Watson Research Center, Yorktown Heights, NY 10598, USA\\
