Some minor typo corrections.

--- a/cvpr_submission/appendix.tex
+++ b/cvpr_submission/appendix.tex
@@ -34,7 +34,7 @@
 	\end{tabular}
 	\end{adjustbox}
 	\caption{Colors \& shapes combinations present in CoGenT-A \& -B datasets.}
-    \label{tab:cogent_conditions}
+    \label{tab:cogent_conditions_supplement}
 \end{table}
 
 The CoGenT dataset contains:
